Testing the netlify deploy stuff

--- a/3-emotioncam.html
+++ b/3-emotioncam.html
@@ -18,6 +18,7 @@ const model = await tf.loadLayersModel(handler); -->
             ">
         </video>
         <h1 id="status">Loading...</h1>
+        <h2>Test text goes here</h2>
         <script>
         function setText( text ) {
             document.getElementById( "status" ).innerText = text;
