--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/face-landmarks-detection@0.0.1/dist/face-landmarks-detection.js"></script>
     </head>
 
-    <!-- const tf = require("@tensorflow/tfjs");
-const tfn = require("@tensorflow/tfjs-node");
-const handler = tfn.io.fileSystem("./path/to/your/model.json");
-const model = await tf.loadLayersModel(handler); -->
     <body>
         <canvas id="output"></canvas>
         <video id="webcam" playsinline style="
@@ -19,6 +15,10 @@ const model = await tf.loadLayersModel(handler); -->
         </video>
         <h1 id="status">Loading...</h1>
         <script>
+        var stats = new Stats();
+        stat.showPanel(0);
+        document.body.appendChild(stats.dom);
+
         function setText( text ) {
             document.getElementById( "status" ).innerText = text;
         }
@@ -70,6 +70,7 @@ const model = await tf.loadLayersModel(handler); -->
         }
 
         async function trackFace() {
+            stats.begin();
             const video = document.querySelector( "video" );
             const faces = await model.estimateFaces( {
                 input: video,
@@ -125,6 +126,8 @@ const model = await tf.loadLayersModel(handler); -->
                 setText( "No Face" );
             }
 
+            stats.end();
+            
             requestAnimationFrame( trackFace );
         }
 
